# bot

./: .gitignore  Dockerfile  LICENSE  README.md  USAGE.md  bot.py  cyberbot.json  docker-compose.yml  onebot11_1035757196.json  passkey.json  pyproject.toml  requirements.txt  run_bot.bat  run_bot.ps1  startup.sh  功能添加指南.md
plugins/: README.md  config_manager.py  error_handler.py  message_router.py  plugin_manager.py
plugins/cmds/: __init__.py
plugins/demo_plugin/: __init__.py
plugins/keyword/: __init__.py  config.json
plugins/keyword/containsKeywords/: config.json
plugins/keyword/exactKeywords/: config.json
plugins/notes/: __init__.py
plugins/orange/: __init__.py
plugins/plugin_manager/: __init__.py  config.py
